--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@ pandas==1.1.3
 bokeh==2.2.3
 voila==0.2.6
 ipykernel==5.5.0
-./site-packages/bokeh/sampledata
+./python3.8/site-packages/bokeh/sampledata
